--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,22 @@
 asgiref==3.4.1
+backports.zoneinfo==0.2.1
+certifi==2022.6.15
+cffi==1.15.1
+charset-normalizer==2.1.0
+cryptography==37.0.4
+defusedxml==0.7.1
 Django==4.0.6
+django-environ==0.9.0
+idna==3.3
+oauthlib==3.2.0
 Pillow==8.4.0
+pycparser==2.21
+PyJWT==2.4.0
+python3-openid==3.2.0
 pytz==2021.3
+requests==2.28.1
+requests-oauthlib==1.3.1
+social-auth-app-django==5.0.0
+social-auth-core==4.3.0
 sqlparse==0.4.2
+urllib3==1.26.11
